// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FontItem has family name that exists in swaps.json 1`] = `
<font-item
  font="{"family":"Material Symbols Sharp","variants":["100","200","300","regular","500","600","700"],"subsets":["latin"],"category":"monospace","tags":[],"lineNumber":752}"
  id="material-symbols-sharp"
  selectedsubset=""
  selectedvariant=""
>
  <div
    class="family"
    id="family-material-symbols-sharp"
  >
    
    
    <div
      class="family-link"
    >
      
      
      <div
        class="family-title material-symbols-sharp"
        id="family-name"
        style="font-family: 'Material Symbols Sharp';"
      >
        
        favorite add delete settings search
      
      </div>
      
      
      <div
        class="family-meta-container"
      >
        
     
        <span
          class="family-title-small"
        >
          Material Symbols Sharp
        </span>
        
      
        <div
          class="family-meta"
        >
          
        
          <span>
            monospace
          </span>
          
        •
        
          <span
            aria-label="100, 200, 300, regular, 500, 600, 700"
          >
            7 variants
          </span>
          
        •
        
          <span
            aria-label="latin"
          >
            1 subsets
          </span>
          
      
        </div>
        
      
      </div>
      
    
    </div>
    
    
    <div
      class="family-tags"
    >
      
      
      <div
        class="family-tags-container"
      />
      
      
      <div
        class="family-meta-links"
      >
        
        
        <a
          aria-label="Edit tags for Material Symbols Sharp"
          href="https://github.com/katydecorah/font-library/blob/gh-pages/families.json#L752"
          target="_blank"
        >
          Edit tags
        </a>
        
        
        <a
          aria-label="Visit Material Symbols Sharp on Google Fonts"
          href="https://fonts.google.com/specimen/Material+Symbols+Sharp"
          target="_blank"
        >
          Google Fonts →
        </a>
        
      
      </div>
      
    
    </div>
    
  
  </div>
</font-item>
`;

exports[`FontItem is variable font 1`] = `
<font-item
  font="{"family":"Akshar","variants":["300","regular","500","600","700"],"subsets":["devanagari","latin","latin-ext"],"category":"sans-serif","tags":["condensed","narrow"],"lineNumber":17,"variable":true}"
  id="akshar"
  selectedsubset=""
  selectedvariant=""
>
  <div
    class="family"
    id="family-akshar"
  >
    
    
    <div
      class="family-link"
    >
      
      
      <div
        class="family-title akshar"
        id="family-name"
        style="font-family: 'Akshar';"
      >
        
        Akshar
      
      </div>
      
      
      <div
        class="family-meta-container"
      >
        
     
        <span
          class="family-title-small"
        />
        
      
        <div
          class="family-meta"
        >
          
        
          <span>
            sans-serif
          </span>
          
        •
        
          <span
            aria-label="300, regular, 500, 600, 700"
          >
            5 variants (variable)
          </span>
          
        •
        
          <span
            aria-label="devanagari, latin, latin-ext"
          >
            3 subsets
          </span>
          
      
        </div>
        
      
      </div>
      
    
    </div>
    
    
    <div
      class="family-tags"
    >
      
      
      <div
        class="family-tags-container"
      >
        <button
          is="tag-button"
          selectedtag="null"
          value="condensed"
        >
          condensed
        </button>
        <button
          is="tag-button"
          selectedtag="null"
          value="narrow"
        >
          narrow
        </button>
      </div>
      
      
      <div
        class="family-meta-links"
      >
        
        
        <a
          aria-label="Edit tags for Akshar"
          href="https://github.com/katydecorah/font-library/blob/gh-pages/families.json#L17"
          target="_blank"
        >
          Edit tags
        </a>
        
        
        <a
          aria-label="Visit Akshar on Google Fonts"
          href="https://fonts.google.com/specimen/Akshar"
          target="_blank"
        >
          Google Fonts →
        </a>
        
      
      </div>
      
    
    </div>
    
  
  </div>
</font-item>
`;

exports[`FontItem no latin subset 1`] = `
<font-item
  font="{"family":"GFS Neohellenic","variants":["regular","italic","700","700italic"],"subsets":["greek"],"category":"sans-serif","tags":["round","monolinear","1930s"],"lineNumber":439}"
  id="gfs-neohellenic"
  selectedsubset=""
  selectedvariant=""
>
  <div
    class="family"
    id="family-gfs-neohellenic"
  >
    
    
    <div
      class="family-link"
    >
      
      
      <div
        class="family-title gfs-neohellenic"
        id="family-name"
        style="font-family: 'GFS Neohellenic';"
      >
        
        Γειά σου Κόσμε
      
      </div>
      
      
      <div
        class="family-meta-container"
      >
        
     
        <span
          class="family-title-small"
        >
          GFS Neohellenic
        </span>
        
      
        <div
          class="family-meta"
        >
          
        
          <span>
            sans-serif
          </span>
          
        •
        
          <span
            aria-label="regular, italic, 700, 700italic"
          >
            4 variants
          </span>
          
        •
        
          <span
            aria-label="greek"
          >
            1 subsets
          </span>
          
      
        </div>
        
      
      </div>
      
    
    </div>
    
    
    <div
      class="family-tags"
    >
      
      
      <div
        class="family-tags-container"
      >
        <button
          is="tag-button"
          selectedtag="null"
          value="round"
        >
          round
        </button>
        <button
          is="tag-button"
          selectedtag="null"
          value="monolinear"
        >
          monolinear
        </button>
        <button
          is="tag-button"
          selectedtag="null"
          value="1930s"
        >
          1930s
        </button>
      </div>
      
      
      <div
        class="family-meta-links"
      >
        
        
        <a
          aria-label="Edit tags for GFS Neohellenic"
          href="https://github.com/katydecorah/font-library/blob/gh-pages/families.json#L439"
          target="_blank"
        >
          Edit tags
        </a>
        
        
        <a
          aria-label="Visit GFS Neohellenic on Google Fonts"
          href="https://fonts.google.com/specimen/GFS+Neohellenic"
          target="_blank"
        >
          Google Fonts →
        </a>
        
      
      </div>
      
    
    </div>
    
  
  </div>
</font-item>
`;

exports[`FontItem renders correctly 1`] = `
<font-item
  font="{"family":"Alef","variants":["regular","700"],"subsets":["hebrew","latin"],"category":"sans-serif","tags":["geometric"],"lineNumber":23}"
  id="alef"
  selectedsubset=""
  selectedvariant=""
>
  <div
    class="family"
    id="family-alef"
  >
    
    
    <div
      class="family-link"
    >
      
      
      <div
        class="family-title alef"
        id="family-name"
        style="font-family: 'Alef';"
      >
        
        Alef
      
      </div>
      
      
      <div
        class="family-meta-container"
      >
        
     
        <span
          class="family-title-small"
        />
        
      
        <div
          class="family-meta"
        >
          
        
          <span>
            sans-serif
          </span>
          
        •
        
          <span
            aria-label="regular, 700"
          >
            2 variants
          </span>
          
        •
        
          <span
            aria-label="hebrew, latin"
          >
            2 subsets
          </span>
          
      
        </div>
        
      
      </div>
      
    
    </div>
    
    
    <div
      class="family-tags"
    >
      
      
      <div
        class="family-tags-container"
      >
        <button
          is="tag-button"
          selectedtag="null"
          value="geometric"
        >
          geometric
        </button>
      </div>
      
      
      <div
        class="family-meta-links"
      >
        
        
        <a
          aria-label="Edit tags for Alef"
          href="https://github.com/katydecorah/font-library/blob/gh-pages/families.json#L23"
          target="_blank"
        >
          Edit tags
        </a>
        
        
        <a
          aria-label="Visit Alef on Google Fonts"
          href="https://fonts.google.com/specimen/Alef"
          target="_blank"
        >
          Google Fonts →
        </a>
        
      
      </div>
      
    
    </div>
    
  
  </div>
</font-item>
`;

exports[`FontItem rtl subset 1`] = `
<font-item
  font="{"family":"Almarai","variants":["300","regular","700","800"],"subsets":["arabic"],"category":"sans-serif","tags":["arabic"],"lineNumber":41}"
  id="almarai"
  selectedsubset=""
  selectedvariant=""
>
  <div
    class="family"
    id="family-almarai"
  >
    
    
    <div
      class="family-link"
    >
      
      
      <div
        class="family-title almarai"
        id="family-name"
        style="font-family: 'Almarai';direction: rtl;"
      >
        
        مرحبا بالعالم
      
      </div>
      
      
      <div
        class="family-meta-container"
      >
        
     
        <span
          class="family-title-small"
        >
          Almarai
        </span>
        
      
        <div
          class="family-meta"
        >
          
        
          <span>
            sans-serif
          </span>
          
        •
        
          <span
            aria-label="300, regular, 700, 800"
          >
            4 variants
          </span>
          
        •
        
          <span
            aria-label="arabic"
          >
            1 subsets
          </span>
          
      
        </div>
        
      
      </div>
      
    
    </div>
    
    
    <div
      class="family-tags"
    >
      
      
      <div
        class="family-tags-container"
      >
        <button
          is="tag-button"
          selectedtag="null"
          value="arabic"
        >
          arabic
        </button>
      </div>
      
      
      <div
        class="family-meta-links"
      >
        
        
        <a
          aria-label="Edit tags for Almarai"
          href="https://github.com/katydecorah/font-library/blob/gh-pages/families.json#L41"
          target="_blank"
        >
          Edit tags
        </a>
        
        
        <a
          aria-label="Visit Almarai on Google Fonts"
          href="https://fonts.google.com/specimen/Almarai"
          target="_blank"
        >
          Google Fonts →
        </a>
        
      
      </div>
      
    
    </div>
    
  
  </div>
</font-item>
`;

exports[`FontItem selected subset 1`] = `
<font-item
  font="{"family":"Alef","variants":["regular","700"],"subsets":["hebrew","latin"],"category":"sans-serif","tags":["geometric"],"lineNumber":23}"
  id="alef"
  selectedsubset="hebrew"
  selectedvariant=""
>
  <div
    class="family"
    id="family-alef"
  >
    
    
    <div
      class="family-link"
    >
      
      
      <div
        class="family-title alef"
        id="family-name"
        style="font-family: 'Alef';direction: rtl;"
      >
        
        שָׁלוֹם עוֹלָם 
      
      </div>
      
      
      <div
        class="family-meta-container"
      >
        
     
        <span
          class="family-title-small"
        >
          Alef
        </span>
        
      
        <div
          class="family-meta"
        >
          
        
          <span>
            sans-serif
          </span>
          
        •
        
          <span
            aria-label="regular, 700"
          >
            2 variants
          </span>
          
        •
        
          <span
            aria-label="hebrew, latin"
          >
            2 subsets
          </span>
          
      
        </div>
        
      
      </div>
      
    
    </div>
    
    
    <div
      class="family-tags"
    >
      
      
      <div
        class="family-tags-container"
      >
        <button
          is="tag-button"
          selectedtag="null"
          value="geometric"
        >
          geometric
        </button>
      </div>
      
      
      <div
        class="family-meta-links"
      >
        
        
        <a
          aria-label="Edit tags for Alef"
          href="https://github.com/katydecorah/font-library/blob/gh-pages/families.json#L23"
          target="_blank"
        >
          Edit tags
        </a>
        
        
        <a
          aria-label="Visit Alef on Google Fonts"
          href="https://fonts.google.com/specimen/Alef"
          target="_blank"
        >
          Google Fonts →
        </a>
        
      
      </div>
      
    
    </div>
    
  
  </div>
</font-item>
`;

exports[`FontItem selected variant, 900 1`] = `
<font-item
  font="{"family":"Anybody","variants":["100","200","300","regular","500","600","700","800","900","100italic","200italic","300italic","italic","500italic","600italic","700italic","800italic","900italic"],"subsets":["latin","latin-ext","vietnamese"],"category":"display","tags":["eurostile"],"lineNumber":78}"
  id="anybody"
  selectedsubset=""
  selectedvariant="900"
>
  <div
    class="family"
    id="family-anybody"
  >
    
    
    <div
      class="family-link"
    >
      
      
      <div
        class="family-title anybody"
        id="family-name"
        style="font-family: 'Anybody';"
      >
        
        Anybody
      
      </div>
      
      
      <div
        class="family-meta-container"
      >
        
     
        <span
          class="family-title-small"
        />
        
      
        <div
          class="family-meta"
        >
          
        
          <span>
            display
          </span>
          
        •
        
          <span
            aria-label="100, 200, 300, regular, 500, 600, 700, 800, 900, 100italic, 200italic, 300italic, italic, 500italic, 600italic, 700italic, 800italic, 900italic"
          >
            18 variants
          </span>
          
        •
        
          <span
            aria-label="latin, latin-ext, vietnamese"
          >
            3 subsets
          </span>
          
      
        </div>
        
      
      </div>
      
    
    </div>
    
    
    <div
      class="family-tags"
    >
      
      
      <div
        class="family-tags-container"
      >
        <button
          is="tag-button"
          selectedtag="null"
          value="eurostile"
        >
          eurostile
        </button>
      </div>
      
      
      <div
        class="family-meta-links"
      >
        
        
        <a
          aria-label="Edit tags for Anybody"
          href="https://github.com/katydecorah/font-library/blob/gh-pages/families.json#L78"
          target="_blank"
        >
          Edit tags
        </a>
        
        
        <a
          aria-label="Visit Anybody on Google Fonts"
          href="https://fonts.google.com/specimen/Anybody"
          target="_blank"
        >
          Google Fonts →
        </a>
        
      
      </div>
      
    
    </div>
    
  
  </div>
</font-item>
`;

exports[`FontItem selected variant, 900italic 1`] = `
<font-item
  font="{"family":"Anybody","variants":["100","200","300","regular","500","600","700","800","900","100italic","200italic","300italic","italic","500italic","600italic","700italic","800italic","900italic"],"subsets":["latin","latin-ext","vietnamese"],"category":"display","tags":["eurostile"],"lineNumber":78}"
  id="anybody"
  selectedsubset=""
  selectedvariant="900italic"
>
  <div
    class="family"
    id="family-anybody"
  >
    
    
    <div
      class="family-link"
    >
      
      
      <div
        class="family-title anybody"
        id="family-name"
        style="font-family: 'Anybody';font-style: italic;"
      >
        
        Anybody
      
      </div>
      
      
      <div
        class="family-meta-container"
      >
        
     
        <span
          class="family-title-small"
        />
        
      
        <div
          class="family-meta"
        >
          
        
          <span>
            display
          </span>
          
        •
        
          <span
            aria-label="100, 200, 300, regular, 500, 600, 700, 800, 900, 100italic, 200italic, 300italic, italic, 500italic, 600italic, 700italic, 800italic, 900italic"
          >
            18 variants
          </span>
          
        •
        
          <span
            aria-label="latin, latin-ext, vietnamese"
          >
            3 subsets
          </span>
          
      
        </div>
        
      
      </div>
      
    
    </div>
    
    
    <div
      class="family-tags"
    >
      
      
      <div
        class="family-tags-container"
      >
        <button
          is="tag-button"
          selectedtag="null"
          value="eurostile"
        >
          eurostile
        </button>
      </div>
      
      
      <div
        class="family-meta-links"
      >
        
        
        <a
          aria-label="Edit tags for Anybody"
          href="https://github.com/katydecorah/font-library/blob/gh-pages/families.json#L78"
          target="_blank"
        >
          Edit tags
        </a>
        
        
        <a
          aria-label="Visit Anybody on Google Fonts"
          href="https://fonts.google.com/specimen/Anybody"
          target="_blank"
        >
          Google Fonts →
        </a>
        
      
      </div>
      
    
    </div>
    
  
  </div>
</font-item>
`;
